[package]
name = "own_or_borrow"
description = "Unified references to owned or RefCell borrowed data"
authors = ["Markus Mayer <widemeadow@gmail.com>"]
version = "0.1.1"
categories = ["no-std", "no-std::no-alloc", "embedded"]
keywords = ["refcell", "embedded"]
homepage = "https://github.com/sunsided/own-or-borrow"
repository = "https://github.com/sunsided/own-or-borrow"
license = "EUPL-1.2"
edition = "2021"

[features]
default = ["std"]
std = []
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "0.3.10", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
